crates/ink/tests/ui/contract/fail/constructor-return-result-non-codec-error.stderr
error[E0277]: the trait bound `contract::Error: WrapperTypeEncode` is not satisfied
  --> tests/ui/contract/fail/constructor-return-result-non-codec-error.rs:13:9
   |
13 |         pub fn constructor() -> Result<Self, Error> {
   |         ^^^ the trait `WrapperTypeEncode` is not implemented for `contract::Error`
   |
   = help: the following other types implement trait `WrapperTypeEncode`:
             &T
             &mut T
             Arc<T>
             Box<T>
             Cow<'a, T>
             Rc<T>
             String
             Vec<T>
             parity_scale_codec::Ref<'a, T, U>
   = note: required because of the requirements on the impl of `Encode` for `contract::Error`
note: required by a bound in `execute_constructor`
  --> src/codegen/dispatch/execution.rs
   |
   |     <private::Seal<R> as ConstructorReturnType<Contract>>::Error: Encode,
   |                                                                   ^^^^^^ required by this bound in `execute_constructor`

error[E0277]: the trait bound `contract::Error: TypeInfo` is not satisfied
 --> tests/ui/contract/fail/constructor-return-result-non-codec-error.rs:1:1
  |
1 | #[ink::contract]
  | ^^^^^^^^^^^^^^^^ the trait `TypeInfo` is not implemented for `contract::Error`
  |
  = help: the following other types implement trait `TypeInfo`:
            &T
            &mut T
            ()
            (A, B)
            (A, B, C)
            (A, B, C, D)
            (A, B, C, D, E)
            (A, B, C, D, E, F)
          and $N others
  = note: required because of the requirements on the impl of `ConstructorReturnSpec` for `Result<(), contract::Error>`
  = note: this error originates in the attribute macro `ink::contract` (in Nightly builds, run with -Z macro-backtrace for more info)
